--- a/etc/manila/rootwrap.d/share.filters
+++ b/etc/manila/rootwrap.d/share.filters
@@ -151,3 +151,9 @@ ls: CommandFilter, ls, root
 
 # manila/data/utils.py: 'touch', '--reference=%s', '%s'
 touch: CommandFilter, touch, root
+
+# manila/share/drivers/container/container.py: docker <whatever>
+docker: CommandFilter, docker, root
+
+# manila/share/drivers/container/container.py: brctl <whatever>
+brctl: CommandFilter, brctl, root
